# tidy_gs

./: .gitignore  command_list.md  config_dynamic_compile.md  config_on_server.md  convert.py  cuda_test.bat  metrics.py  render.py  ruixiang_tool.sh  test.bat  train.py  whole_test.bat  whole_test.sh
forward_with_bug_in_backward/: ext.cu  forward.cu  forward.cuh
loader/: __init__.py  gaussian_model.py  load_cameras.py
renderer/: __init__.py
scene/: __init__.py  camera_loader.py  camera_utils.py  colmap_loader.py  gaussian_model.py  load_cameras.py  load_scene.py
submodules/diff-gaussian-rasterization/: CMakeLists.txt  conv.cu  ext.cpp  ext.cu  rasterize_points.cu  rasterize_points.h  setup.py
submodules/diff-gaussian-rasterization/cuda_rasterizer/: adam.cu  adam.cuh  adam.h  auxiliary.cu  auxiliary.cuh  auxiliary.h  backward.cu  backward.cuh  backward.h  forward.cu  forward.cuh  forward.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.cuh  rasterizer_impl.h
submodules/diff-gaussian-rasterization/diff_gaussian_rasterization/: _C.cp310-win_amd64.pyd  __init__.py
submodules/diff-gaussian-rasterization/diff_gaussian_rasterization.egg-info/: SOURCES.txt
submodules/fused-ssim/: setup.py
submodules/fused-ssim/fused_ssim/: __init__.py
submodules/simple-knn/: setup.py
utils/: arguments.py  general_utils.py  graphics_utils.py  lpipsPyTorch.py
